# rules_rpmbuild

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bootstrap.bzl  go.mod  go.sum
.github/workflows/: action.yaml
cmd/fake-container/: BUILD.bazel  main.go
cmd/fakeroot/: BUILD.bazel  main.go
examples/bash/: BUILD.bazel  MODULE.bazel  README.md  bash-rpm-deps.json  bash.spec
patches/: 0001-bazel-adding-bzlmod-support.patch
rpm-repos/: centos-stream9.yaml  centos7.yaml
rpmbuild/: BUILD.bazel  bootstrap.bzl  bootstrap.sh  extensions.bzl  rpm-build-centos9.json  rpm-centos9.json  rpmbuild.bzl  rpmbuild.sh  utils.bzl
rpmbuild/private/: BUILD.bazel  patchelf.bzl  reproducible_rpmbuild.bzl  setup_reproducible_rpmbuild.sh  utils.bzl
rpmtree/centos7/: BUILD.bazel  filesystem.json  rpm-build.json  rpm.json  yum-with-no-filesystem.json
tools/debug/: BUILD.bazel  debug.go
