module(
    name = "rules_rpmbuild",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_go", version = "0.44.0")

bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0", dev_dependency = True)

bazel_dep(name = "bazeldnf", version = "0.6.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.1.0")

BAZELDNF_COMMIT = "8e110d32399ab1c3db08e18f015b3e7e092a27de"

archive_override(
    module_name = "bazeldnf",
    integrity = "sha256-x1+AOKCknpmFjGfdPJ5cR6+lhjjKX0zh5vlVn2YYHuM=",
    strip_prefix = "bazeldnf-%s" % BAZELDNF_COMMIT,
    urls = [
        "https://github.com/bookingcom/bazeldnf/archive/%s.tar.gz" % BAZELDNF_COMMIT,
    ],
)

bazel_dep(name = "fakeroot", version = "0.0.1")

FAKEROOT_COMMIT = "b2da39c1be0cbd47b2f156d61b6dd04ea0594e1e"

archive_override(
    module_name = "fakeroot",
    integrity = "sha256-RHEyVU1I424iXypAUdWjXYWDQe5mIXYcXnAWNVPZHjc=",
    patch_strip = 1,
    patches = [
        "//:patches/0001-bazel-adding-bzlmod-support.patch",
    ],
    strip_prefix = "fakeroot-%s" % FAKEROOT_COMMIT,
    urls = [
        "https://github.com/lure-sh/fakeroot/archive/%s.tar.gz" % FAKEROOT_COMMIT,
    ],
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_x_sys",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

rpm_deps = use_extension("@bazeldnf//:extensions.bzl", "rpm_deps")
rpm_deps.lock_file(
    generated_visibility = [
        "//visibility:public",
    ],
    path = "rpmtree/centos7/filesystem.json",
    rpm_tree_name = "centos7-filesystem",
)
rpm_deps.lock_file(
    path = "rpmtree/centos7/rpm.json",
    rpm_tree_name = "centos7-rpm",
)
rpm_deps.lock_file(
    path = "rpmtree/centos7/yum-with-no-filesystem.json",
    rpm_tree_name = "centos7-yum-with-no-filesystem",
)
use_repo(rpm_deps, "centos7-filesystem", "centos7-rpm", "centos7-yum-with-no-filesystem")

# this comes from aspect_bazel_lib MODULE.bazel
bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.tar()
use_repo(bazel_lib_toolchains, "bsd_tar_toolchains")

register_toolchains(
    # Expand bsd_tar_toolchains
    "@bsd_tar_toolchains//:linux_amd64_toolchain",
    "@bsd_tar_toolchains//:linux_arm64_toolchain",
    "@bsd_tar_toolchains//:windows_amd64_toolchain",
    # host toolchain must be last, as it's only suitable as a fallback on macos
    "@bsd_tar_toolchains//:host_toolchain",
)
