load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fakeroot_lib",
    srcs = ["main.go"],
    importpath = "github.com/bookingcom/rules_rpmbuild/cmd/fakeroot",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "fakeroot",
    embed = [":fakeroot_lib"],
    visibility = ["//visibility:public"],
)
