load("@bash-rpm-deps//:rpms.bzl", "RPMS")
load("@centos7-rpm-build//:rpms.bzl", rpm_build_rpms="RPMS")
load("@centos7-filesystem//:rpms.bzl", filesystem_rpms="RPMS")
load("@rules_rpmbuild//rpmbuild:rpmbuild.bzl", "rpmbuild")


rpmbuild(
    name = "bash",
    spec_file = "bash.spec",
    sources = {
        "@bash-source//file": "SOURCES/bash.tar.gz"
    },
    rpms = RPMS,
    rpm_build_archive = "@rules_rpmbuild//rpmtree/centos7:bootstrap",
    rpm_build_rpms = rpm_build_rpms + filesystem_rpms,
)
