load("@bash-rpm-deps//:rpms.bzl", deps_rpms="RPMS")
load("@centos7-filesystem//:rpms.bzl", filesystem_rpms="RPMS")
load("@centos7-rpm-build//:rpms.bzl", rpmbuild_rpms="RPMS")
load("@rules_rpmbuild//rpmbuild:rpmbuild.bzl", "rpmbuild")


rpmbuild(
    name = "bash",
    spec_file = "bash.spec",
    sources = {
        "@bash-source//file": "SOURCES/bash.tar.gz"
    },
    deps_rpms = deps_rpms,
    filesystem_rpms = filesystem_rpms,
    rpmbuild_rpms = rpmbuild_rpms,
    deps_rpmtree = "@bash-rpm-deps//:rpms",
    filesystem_rpmtree = "@centos7-filesystem//:rpms",
    rpmbuild_rpmtree = "@centos7-rpm-build//:rpms",
)
