module(
    name = "rules_rpmbuild_bash",
    version = "0.0.1",
)

bazel_dep(name = "rules_rpmbuild", version = "0.0.1")
local_path_override(
    module_name = "rules_rpmbuild",
    path = "../../",
)

BAZELDNF_COMMIT = "1f927b5c5153e6098cb438259e352df24a0bd9c9"

bazel_dep(name = "bazeldnf", version = "0.6.0")
archive_override(
    module_name = "bazeldnf",
    integrity = "sha256-2m27r6+ejOS7i+iZuUoXfjU+cE3W8AImokgcvPKzC3c=",
    strip_prefix = "bazeldnf-%s" % BAZELDNF_COMMIT,
    urls = [
        "https://github.com/bookingcom/bazeldnf/archive/%s.tar.gz" % BAZELDNF_COMMIT,
    ],
)

ASPECT_BAZEL_LIB_COMMIT = "5e369bea01691b80dfa1338fe44bc704c31105d9"
bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")
archive_override(
    module_name = "aspect_bazel_lib",
    strip_prefix = "bazel-lib-%s" % ASPECT_BAZEL_LIB_COMMIT,
    integrity = "sha256-M5Pc7QKgw157lrCvJJC2LscfdfRTDhNU1mNmmig97xY=",
    urls = [
        "https://jfrog.booking.com/artifactory/github-release-mirror/bookingcom/bazel-lib/archive/%s.tar.gz" % ASPECT_BAZEL_LIB_COMMIT,
        "https://github.com/bookingcom/bazel-lib/archive/%s.tar.gz" % ASPECT_BAZEL_LIB_COMMIT,
    ]
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "bash-source",
    integrity = "sha256-yOMb3Fm2mq/8WzZQmQW6Ply7EnRwkdJ7S5d/B4Vg1bg=",
    urls = [
        "https://ftp.gnu.org/gnu/bash/bash-5.2.21.tar.gz",
    ],
)

rpm_deps = use_extension("@bazeldnf//:extensions.bzl", "rpm_deps")
rpm_deps.lock_file(
    path = "bash-rpm-deps.json",
    rpm_tree_name = "bash-rpm-deps",
)
use_repo(rpm_deps, "bash-rpm-deps", "centos7-filesystem", "centos7-rpm-build")
