load("@centos7-filesystem//:rpms.bzl", _filesystem = "RPMS")
load("@centos7-rpm-build//:rpms.bzl", "RPMS")
load("//rpmbuild:bootstrap.bzl", "bootstrap")

bootstrap(
    name = "bootstrap",
    filesystem = _filesystem,
    rpm_install_flags = [
        # this ones have invalid flags
        "--excludepath=/var/spool/mail",
        "--excludepath=/usr/libexec/utempter",
        "--excludepath=/usr/bin/write",
        "--excludepath=/usr/libexec/dbus-1/dbus-daemon-launch-helper",
    ],
    rpm_rpmtree = "@centos7-rpm-build//:rpms",
    rpms = RPMS,
    visibility = ["//visibility:public"],
)
